# Routing3D

./: .gitattributes  .gitignore  CLAUDE.md  README.md  requirements.txt  run.ps1
bindings/: README.md
cpp/: CMakeLists.txt
cpp/bindings/: bindings.cpp  test_bindings.py
cpp/capi/: routing3d_capi.cpp  routing3d_capi.h
cpp/cli/: routing3d_cli.cpp
cpp/include/routing3d/: astar.hpp  corridor.hpp  cost.hpp  fcl_scene.hpp  geometry.hpp  multi_route.hpp  occupancy.hpp  route_task.hpp  scene_io.hpp  vdb_occupancy.hpp
cpp/src/: astar.cpp  cost.cpp  fcl_scene.cpp  multi_route.cpp  occupancy.cpp  scene_io.cpp  sparse_occupancy.cpp  vdb_occupancy.cpp
cpp/tests/: test_attract.cpp  test_capi.cpp  test_corridor.cpp  test_fcl.cpp  test_golden.cpp  test_occupancy.cpp  test_ripup.cpp  test_scene_io.cpp  test_vdb.cpp
cpp/tests/fixtures/: _gen_fixture.py  roundtrip.scene.txt
cpp_engine/: README.md
csharp/: Routing3D.Viewer.sln
csharp/Routing3D.Viewer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Routing3D.Viewer.csproj
csharp/Routing3D.Viewer/Diagnostics/: DbRouteDiag.cs
csharp/Routing3D.Viewer/Interop/: Engine.cs  Native.cs  R3dEngineHandle.cs
csharp/Routing3D.Viewer/Model/: CollisionFinder.cs  ObstacleDbLoader.cs  SceneData.cs  SceneTextParser.cs  UtilityColors.cs
csharp/Routing3D.Viewer/ViewModels/: ObservableObject.cs  RelayCommand.cs  SceneViewModel.cs  TaskRowVM.cs  UtilityFilterVM.cs
docs/: csharp_helix_interop_design.md  development_plan.md  phase1_plan.md  phase2_input_notes.md  phase2_plan.md  phase3_plan.md  routing3d_dev_report.docx  routing3d_regression_report.docx  routing3d_validation_detail.csv  routing3d_validation_report.docx  routing_algorithm_dev_report.docx  routing_algorithm_dev_report.md
docs/spec/: algorithm_spec.md  freeze_signoff.md  performance_targets.md  regression_set.md  scene_format_spec.md  step1_1_occupancy.docx  step1_2_astar.docx  step1_3_cost.docx  step1_4_multi_route.docx
interface_spec/: README.md
python_experiments/: README.md  conftest.py  pyproject.toml
python_experiments/experiments/: baseline_params.json
python_experiments/routing3d_py/: __init__.py  astar.py  cost.py  multi_route.py  obstacle_db.py  occupancy.py  scene.py  scene_io.py  viz.py  viz_scene.py
python_experiments/tests/: scenario_runner.py  test_astar.py  test_corridor.py  test_cost.py  test_diameter.py  test_multi_route.py  test_obstacle_db.py  test_occupancy.py  test_scenarios.py  test_scene.py  test_scene_io.py  test_viz.py
python_experiments/tests/scenarios/01_single_empty/: expected_metrics.json  input.json
python_experiments/tests/scenarios/02_single_obstacle/: expected_metrics.json  input.json
python_experiments/tests/scenarios/03_multi_tier/: expected_metrics.json  input.json
